packages/tree-sitter/typedown-md/test/corpus/block_quotes/nested.txt
================
Blockquote containing a list
================

> - item one
> - item two

---

(document
  (section
    (block_quote
      (block_quote_marker)
      (list
        (list_item
          (list_marker_minus)
          (paragraph
            (inline)))
        (list_item
          (list_marker_minus)
          (paragraph
            (inline)))))))
