packages/tree-sitter/typedown-md/test/corpus/code_blocks/basic.txt
================
Code block with language
================

```python
print("hello")
```

---

(document
  (section
    (fenced_code_block
      (fenced_code_block_delimiter)
      language: (language)
      (code_fence_content)
      (fenced_code_block_delimiter))))

================
Code block without language
================

```
some code
```

---

(document
  (section
    (fenced_code_block
      (fenced_code_block_delimiter)
      (code_fence_content)
      (fenced_code_block_delimiter))))

================
Empty code block
================

```
```

---

(document
  (section
    (fenced_code_block
      (fenced_code_block_delimiter)
      (fenced_code_block_delimiter))))

================
Tilde code block
================

~~~
code here
~~~

---

(document
  (section
    (fenced_code_block
      (fenced_code_block_delimiter)
      (code_fence_content)
      (fenced_code_block_delimiter))))

================
Multi-line code block
================

```python
def hello():
    print("world")
```

---

(document
  (section
    (fenced_code_block
      (fenced_code_block_delimiter)
      language: (language)
      (code_fence_content)
      (fenced_code_block_delimiter))))
