packages/tree-sitter/typedown-md/test/corpus/paragraphs/basic.txt
================
Single paragraph
================

Hello world

---

(document
  (section
    (paragraph
      (inline))))

================
Two paragraphs separated by blank line
================

Hello

World

---

(document
  (section
    (paragraph
      (inline))
    (paragraph
      (inline))))

================
Multi-line paragraph
================

Hello
world
foo

---

(document
  (section
    (paragraph
      (inline))))

================
Paragraph starting with digits
================

Hello
123 not a list

---

(document
  (section
    (paragraph
      (inline))))
