packages/tree-sitter/typedown-md/test/corpus/sections/nesting.txt
================
Nested sections
================

# Top

## Sub

---

(document
  (section
    (atx_heading
      (atx_h1_marker)
      heading_content: (inline))
    (section
      (atx_heading
        (atx_h2_marker)
        heading_content: (inline)))))

================
Sibling sections
================

## First

## Second

---

(document
  (section
    (atx_heading
      (atx_h2_marker)
      heading_content: (inline)))
  (section
    (atx_heading
      (atx_h2_marker)
      heading_content: (inline))))

================
Three-level nesting
================

# H1

## H2

### H3

---

(document
  (section
    (atx_heading
      (atx_h1_marker)
      heading_content: (inline))
    (section
      (atx_heading
        (atx_h2_marker)
        heading_content: (inline))
      (section
        (atx_heading
          (atx_h3_marker)
          heading_content: (inline))))))

================
Section with blocks
================

# Title

Hello world

---

(document
  (section
    (atx_heading
      (atx_h1_marker)
      heading_content: (inline))
    (paragraph
      (inline))))
