packages/tree-sitter/typedown-md/test/corpus/tables/edge_cases.txt
================
Heading after table
================

| A | B |
| - | - |
| 1 | 2 |
# Heading

---

(document
  (section
    (pipe_table
      (pipe_table_header
        (pipe_table_cell)
        (pipe_table_cell))
      (pipe_table_delimiter_row)
      (pipe_table_row
        (pipe_table_cell)
        (pipe_table_cell))))
  (section
    (atx_heading
      (atx_h1_marker)
      heading_content: (inline))))

================
Paragraph after table with blank line
================

| X |
| - |
| 1 |

Some text

---

(document
  (section
    (pipe_table
      (pipe_table_header
        (pipe_table_cell))
      (pipe_table_delimiter_row)
      (pipe_table_row
        (pipe_table_cell)))
    (paragraph
      (inline))))

================
Text without pipe ends table
================

| X |
| - |
| 1 |
Some text

---

(document
  (section
    (pipe_table
      (pipe_table_header
        (pipe_table_cell))
      (pipe_table_delimiter_row)
      (pipe_table_row
        (pipe_table_cell)))
    (paragraph
      (inline))))

================
Single column table
================

| A |
| - |
| 1 |

---

(document
  (section
    (pipe_table
      (pipe_table_header
        (pipe_table_cell))
      (pipe_table_delimiter_row)
      (pipe_table_row
        (pipe_table_cell)))))

================
Table with alignment colons
================

| A | B |
| :- | -: |
| 1 | 2 |

---

(document
  (section
    (pipe_table
      (pipe_table_header
        (pipe_table_cell)
        (pipe_table_cell))
      (pipe_table_delimiter_row)
      (pipe_table_row
        (pipe_table_cell)
        (pipe_table_cell)))))
